Fix conversion of file URL to Path, improve exception handling